--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>TP2</title>
+    <title>Oasis</title>
   </head>
+  
+  <body>
+  
+	<h1>Une cascade de bienfaits grâce aux fruits</h1>
+	
+	<h2>Frambourgeoise veut ajouter son grain ...</h2>
+	<p>J'ai plusieurs petit secret à vous révéler, car mes atouts sont nombreux. Je suis tout d'abord excellente pour votre santé, pour votre coeur, ça me tient à coeur. Je suis une alliée de poids pour votre perte de poids. Petite mais costaud, je suis capable de lutter contre le diabète grâce à mon indice glycémique très bas. Combattante, je vais aide à réduire les risques de cancer avec mes vertues antioxydantes. Sous mes rondeurs, j'ai aussi des vertues appaisantes pour calmer vos douleurs liées à l'arthrose. Grâce à mes antioxydants, je vous promet une peau de pêche !<p>
+	
+	<h2>C'est autour de Ramon Tafraise de se la ramener ...</h2>
+	<p>J'ai tant de qualités que j'en suis rouge de honte ! Je ne suis pas fraisident de mon club de musculation pour rien puisque je suis peu calorique. Je suis aussi doublement riche avec mes fibres et ma vitamine C. Tout comme mon haltère-égo Frambourgeoise, je suis une source importante d'antioxydants. Vous ne serez jamais menacé par la rouille car j'ai la force de stimuler votre système immunitaire.</p>
+	
+	<p>L'alliance de Frambourgeoise et de Ramon Tafraise vous garantit une santé de fer!</p>
+  
+  </body>
