--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Oasis</title>
+    <title>Oasis | Les fruits |</title>
   </head>
   
   <body>
   
-	<h1>Une cascade de bienfaits grâce aux fruits</h1>
+	<h1>Nos fruits Oasis</h1>
 	
-	<h2>Frambourgeoise veut ajouter son grain ...</h2>
-	<p>J'ai plusieurs petit secret à vous révéler, car mes atouts sont nombreux. Je suis tout d'abord excellente pour votre santé, pour votre coeur, ça me tient à coeur. Je suis une alliée de poids pour votre perte de poids. Petite mais costaud, je suis capable de lutter contre le diabète grâce à mon indice glycémique très bas. Combattante, je vais aide à réduire les risques de cancer avec mes vertues antioxydantes. Sous mes rondeurs, j'ai aussi des vertues appaisantes pour calmer vos douleurs liées à l'arthrose. Grâce à mes antioxydants, je vous promet une peau de pêche !<p>
+	<h2>Les qualités de nos produits</h2>
+	  <p>La boisson Oasis est une boisson non gazeuse d'origine 100% naturelle à base de fruits et d'eau de source. Elle est aussi sans conservateur et sans colorant artificiel. Nos boissons aux fruits sont garantie 100% pur jus. Tout les fruits présent dans nos jus ont chacun des vertues bien spécifiques. Avec notre large gamme de 8 parfums, les unes plus fruités que les autres, impossible de ne pas trouver son bonheur ! Nous vous proposons donc les goûts tropical, duo d'oranges, pomme cassis framboise, multifruits, pêche abricot, pomme poire, fraise framboise et notre petit dernier tropical light.</p>
 	
-	<h2>C'est autour de Ramon Tafraise de se la ramener ...</h2>
-	<p>J'ai tant de qualités que j'en suis rouge de honte ! Je ne suis pas fraisident de mon club de musculation pour rien puisque je suis peu calorique. Je suis aussi doublement riche avec mes fibres et ma vitamine C. Tout comme mon haltère-égo Frambourgeoise, je suis une source importante d'antioxydants. Vous ne serez jamais menacé par la rouille car j'ai la force de stimuler le système immunitaire.</p>
+	<h2>Les bienfaits de nos fruits</h2>
+	<p>Les fruits que nous utilisons pour nos jus sont : l'orange, la pomme, la poire, le fruit de la passion, la mangue, la fraise, la framboise, l'ananas, la mûre, le cassis, la pêche, l'abricot, la mangue, la mandarine, le pamplemousse. Chacun de ces fruits à été sélectionné avec soins pour ses bienfaits, pour pouvoir vous donner votre dose de vitamines pour la journée.</p>
 	
-	<p>Frambourgeoise et de Ramon Tafraise sont l'alliance d'un coocktail plein de vitamines !</p>
+	<p></p>
   
   </body>
