--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1>Nos fruits Oasis</h1>
 	
 	<h2>Les qualités de nos produits</h2>
-	  <p>La boisson Oasis est une boisson non gazeuse d'origine 100% naturelle à base de fruits et d'eau de source. Elle est aussi sans conservateur et sans colorant artificiel. Nos boissons aux fruits sont garantie 100% pur jus. Tout les fruits présent dans nos jus ont chacun des vertues bien spécifiques. Avec notre large gamme de 8 parfums, les unes plus fruités que les autres, impossible de ne pas trouver son bonheur ! Nous vous proposons donc les goûts tropical, duo d'oranges, pomme cassis framboise, multifruits, pêche abricot, pomme poire, fraise framboise et notre petit dernier tropical light.</p>
+	  <p>La boisson Oasis, une boisson non gazeuse et peu sucrée, est d'origine 100% naturelle à base de fruits frais et d'eau de source. Elle est aussi sans conservateur, sans colorant artificiel et sans arômes artificiels. Nos boissons aux fruits sont garantie 100% pur jus. Tout les fruits présent dans nos jus ont chacun des vertues bien spécifiques. Avec notre large gamme de 8 parfums, les unes plus fruités que les autres, impossible de ne pas trouver son bonheur ! Nous vous proposons donc les saveurs tropical, duo d'oranges, pomme cassis framboise, multifruits, pêche abricot, pomme poire, fraise framboise et notre petit dernier tropical light.</p>
 	
 	<h2>Les bienfaits de nos fruits</h2>
 	<p>Les fruits que nous utilisons pour nos jus sont : l'orange, la pomme, la poire, le fruit de la passion, la mangue, la fraise, la framboise, l'ananas, la mûre, le cassis, la pêche, l'abricot, la mangue, la mandarine, le pamplemousse. Chacun de ces fruits à été sélectionné avec soins pour ses bienfaits, pour pouvoir vous donner votre dose de vitamines pour la journée.</p>
