--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	<h2>Les bienfaits de nos fruits</h2>
 	<p>Les fruits que nous utilisons pour nos jus sont : l'orange, la pomme, la poire, le fruit de la passion, la mangue, la fraise, la framboise, l'ananas, la mûre, le cassis, la pêche, l'abricot, la mangue, la mandarine, le pamplemousse. Chacun de ces fruits à été sélectionné avec soins pour ses bienfaits, pour pouvoir vous donner votre dose de vitamines pour la journée. Les fruits rouges sont très connus pour leurs riches teneur en fibre et leurs faible taux de sucre, ce qui favorise le transit intestinal. Les fruits exotiques sont souvent utilisés pour lutter contre le cancer ou encore pour faire une cure de vitamines ! Et enfin, nos chers agrumes riche en vitamine C sont la pour détoxifier, pour abaisser le taux de cholestérol et réduire la durée et les symptômes du rhume. Nos jus de fruits sont donc bon pour notre organisme.</p>
 	
-	<p></p>
+	<p>Et n'oubliez pas, Be Fruit !</p>
   
   </body>
